[package]
name = "fp-rust-engine"
version = "1.0.0"
authors = ["Richard White <therichphysicist@gmail.com>"]


[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
rayon = "1.5.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3.50"
wasm-bindgen = { version = "0.2.34", features = ["serde-serialize"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'MouseEvent',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]